--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.1.0'
     //Picasso library for image DL
     compile 'com.squareup.picasso:picasso:2.4.0'
+    //Dynamic Colour Picker
+    compile 'com.android.support:palette-v7:26.1.0'
 }
