--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,6 +28,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.amkelly.tasks.activity.TaskListActivity" />
         </activity>
+        <provider
+            android:name=".provider.TaskProvider"
+            android:authorities="com.example.amkelly.tasks.provider.TaskProvider"
+            android:exported="false"/>
     </application>
 
 </manifest>
