--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
      androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'*/
     //Recyclerview,cardview and palette are all google libraries used to create Android Lollipop apps
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     //Picasso library for image DL
@@ -34,3 +36,6 @@ dependencies {
     //Dynamic Colour Picker
     compile 'com.android.support:palette-v7:26.1.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
