Firebase working with authentication for admins (not normal users)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,12 @@
             android:authorities="com.example.amkelly.bsp.provider.BookProvider"
             android:exported="false" />
         <!-- This has been changed from .login.LoginAuth -> .activity.BookListActivity & Removed empty tag </activity> at the end of the line below.-->
-        <activity android:name=".activity.BookListActivity" />
+        <activity android:name=".activity.BookListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.AdminEdit" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
