--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.google.firebase:firebase-auth:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
     //Picasso library for image DL
-    compile 'com.squareup.picasso:picasso:2.4.0'
+    implementation 'com.squareup.picasso:picasso:2.4.0'
     //Dynamic Colour Picker
-    compile 'com.android.support:palette-v7:26.1.0'
+    implementation 'com.android.support:palette-v7:26.1.0'
 }
 
 
